# ttb-label-verifier

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  TTB_Label_Verification_Presearch.md  pyproject.toml  render.yaml  requirements.txt
app/: batch.py  cache.py  config.py  dependencies.py  image_quality.py  main.py  models.py
app/extractors/: __init__.py  base.py  gemini.py  openai.py  prompt.py
app/templates/: _batch_row.html  _error_panel.html  _result_panel.html  base.html  batch.html  eval_dashboard.html  index.html  sample.html
app/verifier/: normalize.py  rules.py  tolerances.py  warning.py
docs/: DEFINITION_OF_DONE.md  DEPLOY.md  DESIGN_NOTES.md  ERROR_FIX_LOG.md  MEMO.md  PRD.md  TASK_LIST.md  TECH_STACK.md  TESTING_STRATEGY.md  TTB_Label_Verification_Presearch.md  USER_FLOW.md
eval/: README.md  harness.py
sample_data/: README.md  abv-fail.json  spirits-pass.json  warning-fail.json
scripts/: make_manual_test_labels.py  smoke_extractor.py  smoke_gemini.py  smoke_openai.py
tests/: _helpers.py  test_batch_routes.py  test_batch_store.py  test_cache.py  test_cache_integration.py  test_confidence_gate.py  test_eval_dashboard_route.py  test_extract_route.py  test_extraction_prompt.py  test_extractor_base.py  test_extractor_factory.py  test_gemini_extractor.py  test_harness_metrics.py  test_image_quality.py  test_image_quality_integration.py  test_models.py  test_normalize.py  test_openai_extractor.py  test_polish.py  test_rules.py  test_sample_routes.py  test_single_label_routes.py  test_tolerances.py  test_verify_json_route.py  test_warning.py
(+46 files in other folders)
